CRUD problems resolved. Continuing with DB connection.